docs: fix spacing issues on the home page (#17063)

--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -71,6 +71,7 @@
 
 .footer {
   --ifm-footer-background-color: #20232a;
+  --ifm-heading-margin-bottom: 1rem;
 }
 
 .header-github-link::before {
